--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/jquery.formstyler.css">
+    <link rel="stylesheet" href="css/jquery.formstyler.theme.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -57,42 +59,39 @@
                 <div class="slider_item">
                     <div class="slider_item-content">
                         <div class="slider_title">
-                            КОМПЛЕКСНОЕ ЗАКРЫТИЕ ПРЕДПРИЯТИЯ
+                            Lorem, ipsum dolor sit
                         </div>
                         <div class="slider_text">
-                            Полное прекращение существования юридического лица с сохранением легальности всей предыдущей
-                            деятельности.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae voluptate exercitationem officiis quod.
                         </div>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
-                            Оставить заявку
+                            Contact us
                         </a>
                     </div>
                 </div>
                 <div class="slider_item">
                     <div class="slider_item-content">
                         <div class="slider_title">
-                            КОМПЛЕКСНОЕ ЗАКРЫТИЕ ПРЕДПРИЯТИЯ
+                            Lorem, ipsum dolor sit
                         </div>
                         <div class="slider_text">
-                            Полное прекращение существования юридического лица с сохранением легальности всей предыдущей
-                            деятельности.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae voluptate exercitationem officiis quod.
                         </div>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
-                            Оставить заявку
+                            Contact us
                         </a>
                     </div>
                 </div>
                 <div class="slider_item">
                     <div class="slider_item-content">
                         <div class="slider_title">
-                            КОМПЛЕКСНОЕ ЗАКРЫТИЕ ПРЕДПРИЯТИЯ
+                            Lorem, ipsum dolor sit
                         </div>
                         <div class="slider_text">
-                            Полное прекращение существования юридического лица с сохранением легальности всей предыдущей
-                            деятельности.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae voluptate exercitationem officiis quod.
                         </div>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
-                            Оставить заявку
+                            Contact us
                         </a>
                     </div>
                 </div>
@@ -105,9 +104,8 @@
         <div class="container">
             <div class="about_top">
                 <div class="about_title-box">
-                    <div class="about_title">Наши услуги</div>
-                    <div class="about_text">Комплексный подход к вашему вопросу, своевременная правовую помощь,
-                        представление интересов во всех судебных инстанциях.</div>
+                    <div class="about_title">Our services</div>
+                    <div class="about_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae voluptate exercitationem officiis quod.</div>
                 </div>
                 <div class="about_btn">
                 <a href="#">All about us !</a>
@@ -117,8 +115,7 @@
                 <div class="about_item">
                     <img src="img/001-parquet.png" alt="" srcset="">
                     <div class="about_item-title">Siding</div>
-                    <div class="about_item-text">Полное прекращение существования юридического лица с сохранением
-                        легальности всей предыдущей деятельности</div>
+                    <div class="about_item-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae voluptate exercitationem officiis quod.</div>
                     <div class="about_item-btn">
                         <a class="about_item-link" href="">More details
                         </a>
@@ -130,9 +127,7 @@
                 <div class="about_item">  
                     <img src="img/003-window.png" alt="" srcset="">
                     <div class="about_item-title">Windows</div>
-                    <div class="about_item-text">Мы гарантируем полное профессиональное обслуживание клиентов в
-                        заявленных сферах деятельности и соблюдение
-                        конфиденциальности.</div>
+                    <div class="about_item-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae voluptate exercitationem officiis quod.</div>
                     <div class="about_item-btn">
                         <a class="about_item-link" href="">More details
                         </a>
@@ -144,8 +139,7 @@
                 <div class="about_item">
                     <img src="img/002-roof.png" alt="" srcset="">
                     <div class="about_item-title">Roofing</div>
-                    <div class="about_item-text">Налоговый аудит проводят перед проведением налоговых проверок; при
-                        оценке возможных налоговых рисков; при оптимизации налогообложения.</div>
+                    <div class="about_item-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae voluptate exercitationem officiis quod.</div>
                     <div class="about_item-btn">
                         <a class="about_item-link" href="">More details
                         </a>
@@ -161,10 +155,8 @@
     <section class="company">
         <div class="container">
             <div class="company_inner">
-            <div class="company_title">About Company </div>
-            <div class="company_text">Компания специализируется на оказании услуг в сфере корпоративного права, налогового консалтинга, представительства в судах, ликвидации и банкротства предприятий. На сегодняшний день, коллектив компании объединяет 
-                высокопрофессиональных экспертов имеющих 
-                специализации в отдельных областях права.</div>
+            <div class="company_title">About our company </div>
+            <div class="company_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic amet blanditiis voluptate dolore. Harum, doloribus autem pariatur possimus adipisci architecto nesciunt iste debitis hic velit excepturi obcaecati molestias, quibusdam ipsum?</div>
             <a  href="#" class="default_btn">
                 Contact Us!
             </a>
@@ -177,9 +169,8 @@
                 <div class="form_content">
                     <div class="form_top">
                         <div class="form_title-box">
-                            <div class="form_title">Получить консультацию </div>
-                            <div class="form_text">Комплексный подход к вашему вопросу, своевременная правовую помощь,
-                                представление интересов во всех судебных инстанциях.</div>
+                            <div class="form_title">Get a quote</div>
+                            <div class="form_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae voluptate exercitationem officiis quod.</div>
                         </div>
                         <div class="form_box">
                             <form>
@@ -229,6 +220,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/jquery.formstyler.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
