--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                 <div class="header_contacts">
                     <a class="header_phone" href="tel:380963092145">+38 (096) 309 21 45 </a>
                     <a class="header_email" href="#">layout585@gmail.com</a>
-                    <a data-fancybox data-src="#modal" href="javascript:;" class="header_btn" href="#">Бесплатная
-                        консультация</a>
+                    <a data-fancybox data-src="#modal" href="javascript:;" class="header_btn" href="#">Free consultation</a>
                 </div>
             </div>
         </div>
@@ -209,6 +208,24 @@
                             </form>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="advatages">
+        <div class="container">
+            <div class="advatages_inner">
+                <div class="advatages_item">
+                    <div class="advatages_title">The best siding</div>
+                    <div class="advatages_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. At deserunt aliquam ab dolore accusamus maxime fugiat maiores cum </div>
+                </div>
+                <div class="advatages_item">
+                    <div class="advatages_title">The best roofing</div>
+                    <div class="advatages_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. At deserunt aliquam ab dolore accusamus maxime fugiat maiores cum </div>
+                </div>
+                <div class="advatages_item">
+                    <div class="advatages_title">The best windows</div>
+                    <div class="advatages_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. At deserunt aliquam ab dolore accusamus maxime fugiat maiores cum </div>
                 </div>
             </div>
         </div>
