--- a/index.html
+++ b/index.html
@@ -230,6 +230,74 @@
             </div>
         </div>
     </section>
+    <section class="clients">
+        <div class="container">
+            <div class="clients_top">
+                <div class="clients_title-box">
+                    <div class="clients_title">Our services</div>
+                    <div class="clients_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae voluptate exercitationem officiis quod.</div>
+                </div>
+            </div>
+            <div class="clients_inner">
+                <div class="clients_slider">
+                    <div class="clients_slider_inner">
+                        <div class="clients_slider_item">
+                            <div class="clients_slider_title">Incredible and quick!</div>
+                            <div class="clients_slider_text">The staff was honest with me about the price and replacement schedule. The replacement of my siding was done with high quality. The new asphalt shingle siding looks great, and I would recommend this contractor.</div>
+                            <div class="clients_slider_author">Ryan G. Smith</div>
+                        </div>
+                        <div class="clients_slider_item">
+                            <div class="clients_slider_title">Incredible and quick!</div>
+                            <div class="clients_slider_text">The staff was honest with me about the price and replacement schedule. The replacement of my siding was done with high quality. The new asphalt shingle siding looks great, and I would recommend this contractor.</div>
+                            <div class="clients_slider_author">Ryan G. Smith</div>
+                        </div>
+                        <div class="clients_slider_item">
+                            <div class="clients_slider_title">Incredible and quick!</div>
+                            <div class="clients_slider_text">The staff was honest with me about the price and replacement schedule. The replacement of my siding was done with high quality. The new asphalt shingle siding looks great, and I would recommend this contractor.</div>
+                            <div class="clients_slider_author">Ryan G. Smith</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="clients_blog">
+                    <div class="client_images">
+                        <img src="./img/choise_1.jpg" alt="">
+                        <div class="clients_date">
+                            <img src="./img/brick-wall.png" alt="">
+                        </div>
+                    </div>
+                    <div class="client_title">Metal roof</div>
+                    <div class="client-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+                </div>
+                <div class="clients_blog">
+                    <div class="client_images">
+                        <img src="./img/choise_2.jpg" alt="">
+                        <div class="clients_date">
+                            <img src="./img/ladder.png" alt="">
+                        </div>
+                    </div>
+                    <div class="client_title">Wood siding</div>
+                    <div class="client-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <div id="modal">
         <h2>Hello!</h2>
         <p>You are awesome!</p>
