--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         </div>
                     </div>
                     <div class="client_title">Metal roof</div>
-                    <div class="client-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+                    <div class="client-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
                 </div>
                 <div class="clients_blog">
                     <div class="client_images">
@@ -276,11 +276,37 @@
                         </div>
                     </div>
                     <div class="client_title">Wood siding</div>
-                    <div class="client-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+                    <div class="client-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
                 </div>
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer_content">
+            <div class="container">
+                <div class="footer_inner">
+                <div class="footer_info">
+                    <div class="footer_title">Lorem ipsum dolor sit</div>
+                    <div class="footer_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+                    <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
+                        Contact us
+                    </a>
+                    <ul class="footer_list">           
+                        <li><a href="tel:380963092145">+38 (096) 309 21 45</a></li>
+                        <li><a href="#">layout585@gmail.com</a></li>
+                        <li><a href="#">Киев, ул.Пушиной, 1</a></li>
+                    </ul>
+                </div>
+                <div class="footer_map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3050.3790199367045!2d-75.2759798848301!3d40.13384028071999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6bc5f87d2266f%3A0xc5c78ec78bfc5d8a!2s325%20Sentry%20Pkwy%20Building%205%2C%20Blue%20Bell%2C%20PA%2019422%2C%20USA!5e0!3m2!1sen!2sua!4v1627986369943!5m2!1sen!2sua"  style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+            </div>
+            </div>
+        </div>
+        <div class="footer_copy">
+            <div class="container">
+                <div class="copy_text">© 2021 All rights reserved</div>
+            </div>
+        </div>
+    </footer>
 
 
 
