--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 <div class="header_contacts">
                     <a class="header_phone" href="tel:380963092145">+38 (096) 309 21 45 </a>
                     <a class="header_email" href="#">layout585@gmail.com</a>
-                    <a data-fancybox data-src="#modal" href="javascript:;" class="header_btn" href="#">Free consultation</a>
+                    <a data-fancybox data-src="#modal" href="javascript:;" class="header_btn" href="#">Free
+                        consultation</a>
                 </div>
             </div>
         </div>
@@ -61,7 +62,8 @@
                             Lorem, ipsum dolor sit
                         </div>
                         <div class="slider_text">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae voluptate exercitationem officiis quod.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae
+                            voluptate exercitationem officiis quod.
                         </div>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
                             Contact us
@@ -74,7 +76,8 @@
                             Lorem, ipsum dolor sit
                         </div>
                         <div class="slider_text">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae voluptate exercitationem officiis quod.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae
+                            voluptate exercitationem officiis quod.
                         </div>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
                             Contact us
@@ -87,7 +90,8 @@
                             Lorem, ipsum dolor sit
                         </div>
                         <div class="slider_text">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae voluptate exercitationem officiis quod.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae
+                            voluptate exercitationem officiis quod.
                         </div>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
                             Contact us
@@ -104,17 +108,19 @@
             <div class="about_top">
                 <div class="about_title-box">
                     <div class="about_title">Our services</div>
-                    <div class="about_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae voluptate exercitationem officiis quod.</div>
+                    <div class="about_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur
+                        dolor ab quae voluptate exercitationem officiis quod.</div>
                 </div>
                 <div class="about_btn">
-                <a href="#">All about us !</a>
+                    <a href="#">All about us !</a>
                 </div>
             </div>
             <div class="about_items">
                 <div class="about_item">
                     <img src="img/001-parquet.png" alt="" srcset="">
                     <div class="about_item-title">Siding</div>
-                    <div class="about_item-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae voluptate exercitationem officiis quod.</div>
+                    <div class="about_item-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga
+                        aspernatur dolor ab quae voluptate exercitationem officiis quod.</div>
                     <div class="about_item-btn">
                         <a class="about_item-link" href="">More details
                         </a>
@@ -123,10 +129,11 @@
                         </a>
                     </div>
                 </div>
-                <div class="about_item">  
+                <div class="about_item">
                     <img src="img/003-window.png" alt="" srcset="">
                     <div class="about_item-title">Windows</div>
-                    <div class="about_item-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae voluptate exercitationem officiis quod.</div>
+                    <div class="about_item-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga
+                        aspernatur dolor ab quae voluptate exercitationem officiis quod.</div>
                     <div class="about_item-btn">
                         <a class="about_item-link" href="">More details
                         </a>
@@ -138,7 +145,8 @@
                 <div class="about_item">
                     <img src="img/002-roof.png" alt="" srcset="">
                     <div class="about_item-title">Roofing</div>
-                    <div class="about_item-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae voluptate exercitationem officiis quod.</div>
+                    <div class="about_item-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga
+                        aspernatur dolor ab quae voluptate exercitationem officiis quod.</div>
                     <div class="about_item-btn">
                         <a class="about_item-link" href="">More details
                         </a>
@@ -154,13 +162,15 @@
     <section class="company">
         <div class="container">
             <div class="company_inner">
-            <div class="company_title">About our company </div>
-            <div class="company_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic amet blanditiis voluptate dolore. Harum, doloribus autem pariatur possimus adipisci architecto nesciunt iste debitis hic velit excepturi obcaecati molestias, quibusdam ipsum?</div>
-            <a  href="#" class="default_btn">
-                Contact Us!
-            </a>
-            
-        </div>
+                <div class="company_title">About our company </div>
+                <div class="company_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic amet blanditiis
+                    voluptate dolore. Harum, doloribus autem pariatur possimus adipisci architecto nesciunt iste debitis
+                    hic velit excepturi obcaecati molestias, quibusdam ipsum?</div>
+                <a href="#" class="default_btn">
+                    Contact Us!
+                </a>
+
+            </div>
     </section>
     <section class="form">
         <div class="container">
@@ -169,7 +179,8 @@
                     <div class="form_top">
                         <div class="form_title-box">
                             <div class="form_title">Get a quote</div>
-                            <div class="form_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae voluptate exercitationem officiis quod.</div>
+                            <div class="form_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga
+                                aspernatur dolor ab quae voluptate exercitationem officiis quod.</div>
                         </div>
                         <div class="form_box">
                             <form>
@@ -189,12 +200,12 @@
                                         </label>
                                         <label>
                                             Servise
-                                          <select>
-                                             <option value=""></option>
-                                              <option value="">Siding</option>
-                                              <option value="">Roofing</option>
-                                              <option value="">Windows</option>
-                                          </select>
+                                            <select>
+                                                <option value=""></option>
+                                                <option value="">Siding</option>
+                                                <option value="">Roofing</option>
+                                                <option value="">Windows</option>
+                                            </select>
                                         </label>
                                     </div>
                                     <div class="form_boxright">
@@ -217,15 +228,18 @@
             <div class="advatages_inner">
                 <div class="advatages_item">
                     <div class="advatages_title">The best siding</div>
-                    <div class="advatages_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. At deserunt aliquam ab dolore accusamus maxime fugiat maiores cum </div>
+                    <div class="advatages_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. At deserunt
+                        aliquam ab dolore accusamus maxime fugiat maiores cum </div>
                 </div>
                 <div class="advatages_item">
                     <div class="advatages_title">The best roofing</div>
-                    <div class="advatages_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. At deserunt aliquam ab dolore accusamus maxime fugiat maiores cum </div>
+                    <div class="advatages_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. At deserunt
+                        aliquam ab dolore accusamus maxime fugiat maiores cum </div>
                 </div>
                 <div class="advatages_item">
                     <div class="advatages_title">The best windows</div>
-                    <div class="advatages_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. At deserunt aliquam ab dolore accusamus maxime fugiat maiores cum </div>
+                    <div class="advatages_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. At deserunt
+                        aliquam ab dolore accusamus maxime fugiat maiores cum </div>
                 </div>
             </div>
         </div>
@@ -235,7 +249,8 @@
             <div class="clients_top">
                 <div class="clients_title-box">
                     <div class="clients_title">Our services</div>
-                    <div class="clients_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur dolor ab quae voluptate exercitationem officiis quod.</div>
+                    <div class="clients_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur
+                        dolor ab quae voluptate exercitationem officiis quod.</div>
                 </div>
             </div>
             <div class="clients_inner">
@@ -243,17 +258,23 @@
                     <div class="clients_slider_inner">
                         <div class="clients_slider_item">
                             <div class="clients_slider_title">Incredible and quick!</div>
-                            <div class="clients_slider_text">The staff was honest with me about the price and replacement schedule. The replacement of my siding was done with high quality. The new asphalt shingle siding looks great, and I would recommend this contractor.</div>
+                            <div class="clients_slider_text">The staff was honest with me about the price and
+                                replacement schedule. The replacement of my siding was done with high quality. The new
+                                asphalt shingle siding looks great, and I would recommend this contractor.</div>
                             <div class="clients_slider_author">Ryan G. Smith</div>
                         </div>
                         <div class="clients_slider_item">
                             <div class="clients_slider_title">Incredible and quick!</div>
-                            <div class="clients_slider_text">The staff was honest with me about the price and replacement schedule. The replacement of my siding was done with high quality. The new asphalt shingle siding looks great, and I would recommend this contractor.</div>
+                            <div class="clients_slider_text">The staff was honest with me about the price and
+                                replacement schedule. The replacement of my siding was done with high quality. The new
+                                asphalt shingle siding looks great, and I would recommend this contractor.</div>
                             <div class="clients_slider_author">Ryan G. Smith</div>
                         </div>
                         <div class="clients_slider_item">
                             <div class="clients_slider_title">Incredible and quick!</div>
-                            <div class="clients_slider_text">The staff was honest with me about the price and replacement schedule. The replacement of my siding was done with high quality. The new asphalt shingle siding looks great, and I would recommend this contractor.</div>
+                            <div class="clients_slider_text">The staff was honest with me about the price and
+                                replacement schedule. The replacement of my siding was done with high quality. The new
+                                asphalt shingle siding looks great, and I would recommend this contractor.</div>
                             <div class="clients_slider_author">Ryan G. Smith</div>
                         </div>
                     </div>
@@ -266,7 +287,8 @@
                         </div>
                     </div>
                     <div class="client_title">Metal roof</div>
-                    <div class="client-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+                    <div class="client-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.Lorem ipsum dolor
+                        sit, amet consectetur adipisicing elit.</div>
                 </div>
                 <div class="clients_blog">
                     <div class="client_images">
@@ -276,7 +298,8 @@
                         </div>
                     </div>
                     <div class="client_title">Wood siding</div>
-                    <div class="client-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+                    <div class="client-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.Lorem ipsum dolor
+                        sit, amet consectetur adipisicing elit.</div>
                 </div>
             </div>
         </div>
@@ -285,20 +308,25 @@
         <div class="footer_content">
             <div class="container">
                 <div class="footer_inner">
-                <div class="footer_info">
-                    <div class="footer_title">Lorem ipsum dolor sit</div>
-                    <div class="footer_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
-                    <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
-                        Contact us
-                    </a>
-                    <ul class="footer_list">           
-                        <li><a href="tel:380963092145">+38 (096) 309 21 45</a></li>
-                        <li><a href="#">layout585@gmail.com</a></li>
-                        <li><a href="#">Киев, ул.Пушиной, 1</a></li>
-                    </ul>
+                    <div class="footer_info">
+                        <div class="footer_title">Lorem ipsum dolor sit</div>
+                        <div class="footer_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.Lorem ipsum
+                            dolor sit, amet consectetur adipisicing elit.</div>
+                        <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
+                            Contact us
+                        </a>
+                        <ul class="footer_list">
+                            <li><a class="footer_phone" href="tel:380963092145">+38 (096) 309 21 45</a></li>
+                            <li><a class="footer_email"  href="#">layout585@gmail.com</a></li>
+                            <li><a class="footer_adress" href="#">Киев, ул.Пушиной, 1</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer_map">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3050.379204025725!2d-75.2759798846127!3d40.13383617939901!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6bc5f87d2266f%3A0xc5c78ec78bfc5d8a!2s325%20Sentry%20Pkwy%20Building%205%2C%20Blue%20Bell%2C%20PA%2019422%2C%20USA!5e0!3m2!1sen!2sua!4v1627990365962!5m2!1sen!2sua"
+                            width="630" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
                 </div>
-                <div class="footer_map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3050.3790199367045!2d-75.2759798848301!3d40.13384028071999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6bc5f87d2266f%3A0xc5c78ec78bfc5d8a!2s325%20Sentry%20Pkwy%20Building%205%2C%20Blue%20Bell%2C%20PA%2019422%2C%20USA!5e0!3m2!1sen!2sua!4v1627986369943!5m2!1sen!2sua"  style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
-            </div>
             </div>
         </div>
         <div class="footer_copy">
@@ -325,8 +353,11 @@
 
 
     <div id="modal">
-        <h2>Hello!</h2>
-        <p>You are awesome!</p>
+        <h2>Contact us now!</h2>
+        <input type="text" placeholder="Full name">
+        <input type="text" placeholder="Phone">
+        <input type="text" placeholder="Email">
+        <input type="text" placeholder="Subject">
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
