--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href='https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,900&display=swap'
         rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/jquery.formstyler.css">
     <link rel="stylesheet" href="css/jquery.formstyler.theme.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -40,14 +41,18 @@
                         </a>
                     </div>
                     <nav class="menu">
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Siding</a></li>
-                            <li><a href="#">Roofing</a></li>
-                            <li><a href="#">Windows</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
+                        <div class="header_btn-menu">
+                            <span class="icon-menu"></span>
+                        </div>
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">About Us</a></li>
+                                <li><a href="#">Siding</a></li>
+                                <li><a href="#">Roofing</a></li>
+                                <li><a href="#">Windows</a></li>
+                                <li><a href="#">Contact</a></li>
+                            </ul>
+                        
                     </nav>
                 </div>
             </div>
@@ -117,7 +122,7 @@
             </div>
             <div class="about_items">
                 <div class="about_item">
-                    <img src="img/001-parquet.png" alt="" srcset="">
+                    <img src="img/002-roof.png" alt="" srcset="">
                     <div class="about_item-title">Siding</div>
                     <div class="about_item-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga
                         aspernatur dolor ab quae voluptate exercitationem officiis quod.</div>
@@ -143,7 +148,8 @@
                     </div>
                 </div>
                 <div class="about_item">
-                    <img src="img/002-roof.png" alt="" srcset="">
+
+                    <img src="img/001-parquet.png" alt="" srcset="">
                     <div class="about_item-title">Roofing</div>
                     <div class="about_item-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga
                         aspernatur dolor ab quae voluptate exercitationem officiis quod.</div>
@@ -335,29 +341,13 @@
             </div>
         </div>
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <div id="modal">
         <h2>Contact us now!</h2>
         <input type="text" placeholder="Full name">
         <input type="text" placeholder="Phone">
         <input type="text" placeholder="Email">
         <input type="text" placeholder="Subject">
+        <input type="submit" value="Send">
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
