--- a/contact.html
+++ b/contact.html
@@ -47,30 +47,35 @@
                             <ul class="menu_list">
                                 <li class="menu_link"><a href="#">Home</a></li>
                                 <li class="menu_link"><a href="#">About Us</a></li>
-                                <li class="menu_link">
-                                    <a href="#">Siding</a>
-                                    <ul class="submenu_list">
-                                        <a class="submenu_link" href="#">------</a>
-                                        <a class="submenu_link" href="#">------</a>
-                                        <a class="submenu_link" href="#">------</a>
-                                    </ul>
+                                <li>
+                                    <button onclick="myFunction()" class="dropbtn">Siding</button>
+                                    <div id="myDropdown" class="dropdown-content">
+                                      <a href="#">0</a>
+                                      <a href="#">0</a>
+                                      <a href="#">0</a>
+                                    </div>
                                 </li>
-                                <li class="menu_link"><a href="#">Roofing</a>
-                                    <ul class="submenu_list">
-                                        <a class="submenu_link" href="#">------</a>
-                                        <a class="submenu_link" href="#">------</a>
-                                        <a class="submenu_link" href="#">------</a>
-                                    </ul>
+                                <li>
+                                    <button onclick="myFunction()" class="dropbtn">Roofing</button>
+                                    <div id="myDropdown" class="dropdown-content">
+                                      <a href="#">1</a>
+                                      <a href="#">1</a>
+                                      <a href="#">1</a>
+                                    </div>
                                 </li>
-                                <li class="menu_link"><a href="#">Windows</a>
-                                    <ul class="submenu_list">
-                                        <a class="submenu_link" href="#">------</a>
-                                        <a class="submenu_link" href="#">------</a>
-                                        <a class="submenu_link" href="#">------</a>
-                                    </ul>
+                                <li>
+                                    <button onclick="myFunction()" class="dropbtn">Windows</button>
+                                    <div id="myDropdown" class="dropdown-content">
+                                      <a href="#">2</a>
+                                      <a href="#">2</a>
+                                      <a href="#">2</a>
+                                    </div>
                                 </li>
                                 <li class="menu_link"><a href="#">Contact</a></li>
+
                             </ul>
+
+
 
                             
                         
