--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                             <span class="icon-menu"></span>
                         </div>
                             <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">About Us</a></li>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About Us</a></li>
                                 <li><a href="#">Siding</a></li>
                                 <li><a href="#">Roofing</a></li>
                                 <li><a href="#">Windows</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="contact.html">Contact</a></li>
                             </ul>
                         
                     </nav>
