--- a/index.html
+++ b/index.html
@@ -44,15 +44,41 @@
                         <div class="header_btn-menu">
                             <span class="icon-menu"></span>
                         </div>
-                            <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="#">Siding</a></li>
-                                <li><a href="#">Roofing</a></li>
-                                <li><a href="#">Windows</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                            </ul>
-                        
+                        <ul class="menu_list">
+                            <li class="menu_link"><a href="#">Home</a></li>
+                            <li class="menu_link"><a href="#">About Us</a></li>
+                            <li>
+                                <button onclick="myFunction()" class="dropbtn">Siding</button>
+                                <div id="myDropdown" class="dropdown-content">
+                                    <a href="#">0</a>
+                                    <a href="#">0</a>
+                                    <a href="#">0</a>
+                                </div>
+                            </li>
+                            <li>
+                                <button onclick="myFunction()" class="dropbtn">Roofing</button>
+                                <div id="myDropdown" class="dropdown-content">
+                                    <a href="#">1</a>
+                                    <a href="#">1</a>
+                                    <a href="#">1</a>
+                                </div>
+                            </li>
+                            <li>
+                                <button onclick="myFunction()" class="dropbtn">Windows</button>
+                                <div id="myDropdown" class="dropdown-content">
+                                    <a href="#">2</a>
+                                    <a href="#">2</a>
+                                    <a href="#">2</a>
+                                </div>
+                            </li>
+                            <li class="menu_link"><a href="#">Contact</a></li>
+
+                        </ul>
+
+
+
+
+
                     </nav>
                 </div>
             </div>
