--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href='https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,900&display=swap'
-        rel="stylesheet">
+        rel="stylesheet">    
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
@@ -21,6 +21,12 @@
 </head>
 
 <body>
+    <div class="preloader">
+        <div class="preloader__row">
+          <div class="preloader__item"></div>
+          <div class="preloader__item"></div>
+        </div>
+      </div>
     <header class="header">
         <div class="header_top">
             <div class="container">
@@ -44,34 +50,33 @@
                         <div class="header_btn-menu">
                             <span class="icon-menu"></span>
                         </div>
-                        <ul class="menu_list">
-                            <li class="menu_link"><a href="#">Home</a></li>
-                            <li class="menu_link"><a href="#">About Us</a></li>
-                            <li>
-                                <button onclick="myFunction()" class="dropbtn">Siding</button>
-                                <div id="myDropdown" class="dropdown-content">
-                                    <a href="#">0</a>
-                                    <a href="#">0</a>
-                                    <a href="#">0</a>
-                                </div>
+                        <ul class="nav">
+                            <li class="menu_link"><a href="index.html">Home</a></li>
+                            <li class="menu_link"><a href="about.html">About Us</a></li>
+                            <li><a href="" class="mark">Siding</a>
+                                <i class="triangle"></i>
+                                <ul class="sub-nav">
+                                    <li><a href="servise.html">Пункт 1 подменю</a></li>
+                                    <li><a href="servise.html">Пункт 2 подменю</a></li>
+                                    <li><a href="servise.html">Пункт 3 подменю</a></li>
+                                </ul>
                             </li>
-                            <li>
-                                <button onclick="myFunction()" class="dropbtn">Roofing</button>
-                                <div id="myDropdown" class="dropdown-content">
-                                    <a href="#">1</a>
-                                    <a href="#">1</a>
-                                    <a href="#">1</a>
-                                </div>
-                            </li>
-                            <li>
-                                <button onclick="myFunction()" class="dropbtn">Windows</button>
-                                <div id="myDropdown" class="dropdown-content">
-                                    <a href="#">2</a>
-                                    <a href="#">2</a>
-                                    <a href="#">2</a>
-                                </div>
-                            </li>
-                            <li class="menu_link"><a href="#">Contact</a></li>
+                            <li><a href="" class="mark">Roofing</a>
+                                <i class="triangle"></i>
+                                <ul class="sub-nav">
+                                    <li><a href="servise.html">Пункт 1 подменю</a></li>
+                                    <li><a href="servise.html">Пункт 2 подменю</a></li>
+                                    <li><a href="servise.html">Пункт 3 подменю</a></li>
+                                </ul>
+                                <li><a href="" class="mark">Windows</a>
+                                    <i class="triangle"></i>
+                                    <ul class="sub-nav">
+                                        <li><a href="servise.html">Пункт 1 подменю</a></li>
+                                        <li><a href="servise.html">Пункт 2 подменю</a></li>
+                                        <li><a href="servise.html">Пункт 3 подменю</a></li>
+                                    </ul>
+                                </li>
+                            <li class="menu_link"><a href="contact.html">Contact</a></li>
 
                         </ul>
 
@@ -84,6 +89,21 @@
             </div>
         </div>
     </header>
+    <svg class="wave-divider" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28" preserveAspectRatio="none">
+        <defs>
+            <path id="gentle-wave"
+            d="M-160 44c30 0 
+            58-18 88-18s
+            58 18 88 18 
+            58-18 88-18 
+            58 18 88 18
+            v44h-352z" />
+        </defs>
+        <g class="wave-parallax1"><use xlink:href="#gentle-wave" x="50" y="3" fill="#ffc222"/></g>
+        <g class="wave-parallax2"><use xlink:href="#gentle-wave" x="50" y="0" fill="#fadb87"/></g>
+        <g class="wave-parallax3"><use xlink:href="#gentle-wave" x="50" y="9" fill="#e0bf65"/></g>
+        <g class="wave-parallax4"><use xlink:href="#gentle-wave" x="50" y="6" fill="#ffc833"/></g>
+    </svg>
     <section class="page-title">
         <div style="background-image: url(/img/main_page_title.jpg)" cover class="img_ser">
             <div id="breadcrumb_inner" class="col col-xs-12">
@@ -99,6 +119,11 @@
         </div> <!-- end row -->
         </div> <!-- end container -->
     </section>
+    
+
+
+
+
     <footer class="footer">
         <div class="footer_content">
             <div class="container">
@@ -130,6 +155,7 @@
             </div>
         </div>
     </footer>
+
     <div id="modal">
         <h2>Contact us now!</h2>
         <input type="text" placeholder="Full name">
