--- a/servise.html
+++ b/servise.html
@@ -87,7 +87,7 @@
     </header>
     <div class="s_page">
         <section class="page-title">
-            <div style="background-image: url(/img/main_page_title.jpg)">
+            <div>
                 <div id="breadcrumb_inner" class="col col-xs-12">
                     <h1 class="about_s">Sevises</h1>
                     <nav aria-label="breadcrumb">
