правки по всему

--- a/servise.html
+++ b/servise.html
@@ -81,7 +81,65 @@
 
 
                     </nav>
+                    
                 </div>
+                <div id="menu-container">
+                    <div id="menu-wrapper">
+                       <div id="hamburger-menu"><span></span><span></span><span></span></div>
+                       <!-- hamburger-menu -->
+                    </div>
+                    <!-- menu-wrapper -->
+                    <ul class="menu-list accordion">
+                         <!-- accordion-toggle -->
+                         <li id="nav2"  class="menu-submenu"> 
+                            <a class="menu-link" href="index.html">Home</a>
+                         </li>
+                         <li id="nav2"  class="menu-submenu"> 
+                            <a class="menu-link" href="about.html">About us</a>
+                         </li>
+                         <!-- accordion-toggle -->
+                       <li id="nav1" class="toggle accordion-toggle"> 
+                          <span class="icon-plus"></span>
+                          <a class="menu-link" href="#">Siding</a>
+                       </li>
+                       <!-- accordion-toggle -->
+                       <ul class="menu-submenu accordion-content">
+                          <li><a class="head" href="#">Submenu1</a></li>
+                          <li><a class="head" href="#">Submenu2</a></li>
+                          <li><a class="head" href="#">Submenu3</a></li>
+                       </ul>
+                       <!-- menu-submenu accordon-content-->
+                       <li id="nav2" class="toggle accordion-toggle"> 
+                          <span class="icon-plus"></span>
+                          <a class="menu-link" href="#">Roofing</a>
+                       </li>
+                       <!-- accordion-toggle -->
+                       <ul class="menu-submenu accordion-content">
+                          <li><a class="head" href="#">Submenu1</a></li>
+                          <li><a class="head" href="#">Submenu2</a></li>
+                          <li><a class="head" href="#">Submenu4</a></li>
+                       </ul>
+                       <!-- menu-submenu accordon-content-->
+                            <li id="nav3" class="toggle accordion-toggle"> 
+                          <span class="icon-plus"></span>
+                          <a class="menu-link" href="#">Windows</a>
+                       </li>
+                       <!-- accordion-toggle -->
+                       <ul class="menu-submenu accordion-content">
+                          <li><a class="head" href="#">Submenu1</a></li>
+                          <li><a class="head" href="#">Submenu2</a></li>
+                          <li><a class="head" href="#">Submenu3</a></li>
+
+                       </ul>
+                       <li id="nav2" class="menu-submenu"> 
+                        <a class="menu-link" href="contact.html">Contact</a>
+                     </li>
+
+                       <!-- menu-submenu accordon-content-->
+                    </ul>
+                    <!-- menu-list accordion-->
+                 </div>
+                 <!-- menu-container -->
             </div>
         </div>
     </header>
